# Half_edges

./: README.md
half_edge/: Optimize Documentary.md
half_edge/foo/: CMakeCache.txt  Makefile  cmake_install.cmake
half_edge/foo/engine/: Makefile  cmake_install.cmake
half_edge/foo/engine/core/: Makefile  cmake_install.cmake
half_edge/foo/engine/render/: Makefile  cmake_install.cmake
half_edge/foo/exts/: Makefile  cmake_install.cmake
half_edge/foo/exts/glew/: Makefile  cmake_install.cmake
half_edge/foo/exts/glfw-3.1.1/: Makefile  cmake_install.cmake
half_edge/foo/exts/glfw-3.1.1/src/: Makefile  cmake_install.cmake
half_edge/foo/projects/: Makefile  cmake_install.cmake
half_edge/foo/projects/ImGuiExample/: Makefile  cmake_install.cmake
half_edge/foo/projects/example/: Makefile  cmake_install.cmake
half_edge/foo/projects/mathLibrary/: Makefile  cmake_install.cmake
half_edge/foo/projects/solution/: Makefile  cmake_install.cmake  solution
half_edge/projects/ImGuiExample/code/: exampleapp.cc  exampleapp.h
half_edge/projects/example/: CMakeLists.txt
half_edge/projects/mathLibrary/: CMakeLists.txt
half_edge/projects/mathLibrary/code/: Matrix3D.h  Vector3D.h
half_edge/projects/solution/: CMakeLists.txt
half_edge/projects/solution/code/: exampleapp.cc  exampleapp.h  halfEdgeMeshes.cpp  halfEdgeMeshes.h  main.cc
